Split dashboard metrics changes into feature/dashboard-overview-backend