@@ -8,12 +8,17 @@ import org.springframework.stereotype.Service;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import com.travelhub.backend.repository.ReviewRepository;
+
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class HotelService {
 
     private final HotelRepository hotelRepository;
+    private final ReviewRepository reviewRepository;
 
     public List<HotelResponse> getAllHotels() {
         return hotelRepository.findAll()
@@ -36,10 +41,11 @@ public class HotelService {
     }
 
     private HotelResponse toHotelResponse(Hotel hotel) {
-        List<String> amenityList = null;
-        if (hotel.getAmenities() != null) {
-            amenityList = Arrays.asList(hotel.getAmenities().split(","));
-        }
+        List<String> amenityList = (hotel.getAmenityList() != null)
+                ? hotel.getAmenityList().stream()
+                    .map(amenity -> amenity.getName())
+                    .collect(Collectors.toList())
+                : List.of();
 
         return HotelResponse.builder()
                 .id(hotel.getId())
@@ -49,10 +55,9 @@ public class HotelService {
                 .description(hotel.getDescription())
                 .priceFrom(hotel.getPriceFrom())
                 .priceTo(hotel.getPriceTo())
-                .rating(hotel.getRating())
-                .reviewCount(hotel.getReviewCount())
                 .imageUrl(hotel.getImageUrl())
                 .amenities(amenityList)
+                .district(hotel.getDistrict())
                 .build();
     }
 }
